<resources>
    <string name="app_name">BottomAppBar</string>
    <string name="action_favorite">Favorites</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="holiday_places">Holiday Places</string>
    <string name="furniture">Furniture</string>
    <string name="work">Work</string>
    <string name="action_mail">Mail</string>
    <string name="action_delete">Delete</string>
    <string name="action_archive">Archive</string>
    <string name="toggle_screen">TOGGLE SCREEN</string>
    <string name="moon">Moon</string>
    <string name="call">Call</string>
    <string name="cloud">Cloud</string>
    <string name="cut">Cut</string>
    <string name="details">Details</string>
    <string name="walk">Walk</string>
    <string name="drive">Drive</string>
    <string name="download">Download</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="flight">Flight</string>
    <string name="ideas">Ideas</string>
    <string name="sun">Sun</string>
    <string name="my_name">Cansu Aktaş</string>
    <string name="my_mail">yeksancansu@gmail.cıom</string>
    <string name="snack_bar_shown">SnackBar is shown</string>
    <string name="ok">OK</string>
    <string name="favorites_click">Favorites clicked</string>
    <string name="search_click">Search clicked</string>
    <string name="settings_click">Settings clicked</string>
    <string name="mail_click">Mail clicked</string>
    <string name="delete_click">Delete clicked</string>
    <string name="archive_click">Archive clicked</string>
    <string name="holiday_click">Holiday clicked</string>
    <string name="furniture_click">Furniture clicked</string>
    <string name="work_click">Work clicked</string>
    <string name="moon_click">Moon clicked</string>
    <string name="call_click">Call clicked</string>
    <string name="cloud_click">Cloud clicked</string>
    <string name="cut_click">Cut clicked</string>
    <string name="detail_click">Details clicked</string>
    <string name="walk_click">Walk clicked</string>
    <string name="drive_click">Drive clicked</string>
    <string name="download_click">Download clicked</string>
    <string name="fingerprint_click">Fingerprint clicked</string>
    <string name="flight_click">Flight clicked</string>
    <string name="ideas_click">Ideas clicked</string>
    <string name="sun_click">Sun clicked</string>
    <string name="welcome">Welcome!</string>
</resources>
